--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
   "imports": {
     "react/": "https://esm.sh/react@^19.1.0/",
     "react": "https://esm.sh/react@^19.1.0",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.0/"
+    "react-dom/": "https://esm.sh/react-dom@^19.1.0/",
+    "lz-string": "https://esm.sh/lz-string@^1.5.0"
   }
 }
 </script>
